fix overflow issue, attempt 3

--- a/src/styles/StarCanvas.css
+++ b/src/styles/StarCanvas.css
@@ -1,7 +1,9 @@
 .header-container {
     display: flex;
     height: auto;
-    width: 100%;
+    width: 100vw;
+    position: relative;
+    overflow: hidden;
     align-items: center;
     justify-content: center;
   }
